# rust-weatherflow

./: CHANGELOG.md  Cargo.toml  README.md  justfile
src/: main.rs
